--- a/style.css
+++ b/style.css
@@ -101,13 +101,19 @@ h1 {
     gap: 12px;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1500px) {
     header {
-        width: 40%;
+        width: 35%;
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 940px) {
+    header {
+        width: 45%;
+    }
+}
+
+@media (max-width: 630px) {
     header {
         width: 75%;
     }
